feat: Update login page design and functionality with enhanced user experience

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quriousity Learning Platform</title>
+  <title>Qurius.ai | Learn | Practise |Apply</title>
   <script>
     // Check for theme preference on initial load
     if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
